--- a/reset.css
+++ b/reset.css
@@ -40,6 +40,8 @@ ul:hover li {
   transition: width 2s linear;
 }
 
+/*******/
+
 @keyframes straightShot {
   0% {
     left: 25px;
@@ -73,28 +75,21 @@ ul:hover li {
   animation: bankShot 2s ease-out;
 }
 
-@keyframes eightBall {
+@keyframes eightball {
   0% {
-    left: 25px;
+    left: 300px;
   }
-  20% {
-    left: 120px;
-    top: 0px;
-  }
-  40% {
-    left: 240px;
-    top: 90px;
-  }
-  60% {
-    left: 120px;
-    top: 180px;
-  }
-  80% {
-    left: 240px;
-    top: 90px;
-  }
+
   100% {
-    left: 280px;
-    top: 90px;
+    left: 380px;
   }
 }
+
+#table3:hover #eightball {
+  animation: eightBall 1s linear 2s;
+}
+#table3:hover #cueball3 {
+  animation: eightball 1s ease-out 1s;
+}
+
+/*******/
