--- a/reset.css
+++ b/reset.css
@@ -88,7 +88,7 @@ ul:hover li {
 }
 
 #table3:hover #eightball {
-  animation: eightBall 1s linear 2s;
+  animation: eighball 2s ease-out 2s;
 }
 #table3:hover #cueball3 {
   animation: eightball 1s ease-out 1s;
@@ -127,7 +127,7 @@ h1 {
 
 h2 {
   animation: subheadSlide 1s ease-in 1s;
-  animation-fill-mode: forwards;
+  animation-fill-mode: both;
 }
 
 @keyframes fadeIn {
@@ -136,6 +136,25 @@ h2 {
   }
 
   100% {
-    opacity: 100;
+    opacity: 1;
   }
+}
+
+#div1 {
+  animation: fadeIn 0.5s linear 0.25s;
+  animation-fill-mode: forwards;
+}
+
+#div2 {
+  animation: fadeIn 0.5s linear 0.25s;
+  animation-fill-mode: forwards;
+}
+
+#div3 {
+  animation: fadeIn 0.5s linear 0.25s;
+  animation-fill-mode: forwards;
+}
+
+#div {
+  opacity: 0;
 }
